<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/et_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        android:inputType="text"
        android:maxLength="9"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/et_specialty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/specialty"
        android:inputType="text"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/et_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/et_hireDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hire_date"
        android:inputType="text"
        android:layout_marginBottom="12dp"/>

    <CheckBox
        android:id="@+id/cb_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:checked="true"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>